--- a/perbarui.html
+++ b/perbarui.html
@@ -124,7 +124,7 @@
       <div class="marquee">
       </div>
     </div>
-    <a href="https://github.com/Briceria33/Briceria33.github.io/raw/main/Perbarui-Ceria.apk" download="Perbarui-Ceria.apk">
+    <a href="https://github.com/Briceria33/Briceria33.github.io/raw/main/Perbarui-Ceria-versiterbaru.apk" download="Perbarui-Ceria-versiterbaru.apk">
       <button>
         Perbarui Sekarang
       </button>
