--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
  function playaudio(){
 document.getElementById('musikku').play();
  setTimeout(() => {
-     window.location.href = './indexx.html'; 
+     window.location.href = './indexxx.html'; 
  },0);
  }    
  </script>           
